# hungarian

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: hungarian.cpp  hungarian.hpp
